--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,18 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "JWT": {
+    "ValidAudience": "User",
+    "ValidIssuer": "https://localhost:44312",
+    "Secret": "ReallyStrongToken123"
+  },
+  "AllowedHosts": "*"
 }
